# clo

./: .gitignore  1  Justfile  README.md  TODO.md  clo.opam  compile  dune-project  out2
examples/: arrays.cl  compile.cl  fib.cl  fib.ll  ir.ll  syntax.cl
lib/: ast.ml  codegen.ml  driver.ml  dune  fileutil.ml  lexer.mll  parser.messages  parser.mly  typed_ast.ml  util.ml
reporting/: dune  renderer.ml
test/: dune
